<resources>
    <string name="app_name">PerguntaPraQuemSabe</string>
    <string name="action_settings">Settings</string>
    <string name="capital">Valo Inicial</string>
    <string name="montante">Valo Final</string>
    <string name="quantidade_parcelas">Quantidade de parcelas</string>
    <string name="juros_informado">Juros informado</string>
    <string name="calcular">Calcular</string>
    <string name="juros_real_menor_informado">ATENÇÃO: O juros real é MENOR que o juros informado!</string>
    <string name="juros_real_igual_informado">Tudo certo, o juros real é IGUAL ao informado!</string>
    <string name="juros_real_maior_informado">ATENÇÃO: O juros real é MAIOR que o informado!</string>
    <string name="mensagem_resultado_usuario">O juros real é {0}</string>
</resources>
